--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ span{
 li{
     display:flex;
     align-items: center;
+    justify-content: space-between;
     gap:20px;
+    border-bottom: 2px solid silver;
 }
 
 thead tr{
@@ -30,6 +32,11 @@ thead tr{
 
 body{
     background-color: aliceblue;
+    padding:10px 10px 40px;
+}
+
+body > *{
+    utline:1px solid red;
 }
 
 header{
@@ -52,10 +59,11 @@ header p{
 .container{
     width:1000px;
     max-width:90vw;
-    padding:20px 20px 40px;
+    padding:0px;
     display:grid;
     grid-template-columns: 1fr;
     gap:20px;
+    margin:0 auto;
 }
 
 /*INPUT SECTION*/
@@ -67,6 +75,37 @@ header p{
 }
 .header{
     display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:10px 0;
+}
+
+.add-icon{
+    width:33px;
+    height:33px;
+    padding:7px;
+    background-color: silver;
+    border-radius: 50%;
+}
+
+.add-icon:hover svg{
+    transform:scale(1.5)
+}
+
+.cancel{
+    color:red;
+    width:25px;
+    opacity:0;
+}
+
+.cancel:hover{
+    transform:scale(1.2);
+}
+
+.icons .add-icon{
+    background-color: red;
+    width:20px;
+    height:20px;
 }
 
 .main-heading{
@@ -76,6 +115,8 @@ header p{
 
 .course{
     width:100px;
+    background-color: inherit;
+    font-size: 17px;
 }
 
 .course:focus{
@@ -84,19 +125,87 @@ header p{
 
 input,
 select{
-    padding: 4px 5px;
+    padding: 5px;
     border:0;
-    border-radius:5px;
+    border-radius:3px;
 }
 
 table{
-    border-spacing:13px;
+    border-spacing:0;
+    background-color:rgba(5, 249, 249, 0.246);
+    width:100%;
+    border: 2px solid silver;
+    padding: 10px 0;
 }
 
-table{
-background-color:rgba(5, 249, 249, 0.246);
+td,th{
+    padding:6px 10px;
 }
 
+tbody tr:hover{
+    background-color: silver;
+    cursor:pointer;
+}
+
+tbody tr:hover .cancel{
+    opacity:1;
+}
+
+
+.outputs{
+    background-color: white;
+    padding:0 15px;
+    border-radius: 10px;
+    margin-top: 20px;
+    padding-bottom:20px;
+}
+.gpa{
+    margin: 20px 0 30px;
+}
+
+.sub-heading{
+    color:gray;
+    padding:10px 0;
+    font-style: oblique;
+}
+
+button{
+    all:unset;
+}
+
+.heading{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.add-semester{
+    padding:7px 10px;
+    background-color: gray;
+    width:fit-content;
+    font-size: 14px;
+    color:white;
+    font-weight: 700;
+    letter-spacing: 2px;
+    border-radius: 7px;
+}
+
+.add-semester:hover{
+    color:gray;
+    background-color: white;
+    outline:2px solid black;
+}
+
+.report{
+    font-style: italic;
+    font-weight: 700;
+    margin-top: 20px;  
+}
+
+.footer{
+    display:flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
 
 
 
