--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ li{
     justify-content: space-between;
     gap:20px;
     border-bottom: 2px solid silver;
+    padding:5px 0;
 }
 
 thead tr{
@@ -57,27 +58,37 @@ header p{
 }
 
 .container{
-    width:1000px;
+    background-color: white;
+    width:1100px;
     max-width:90vw;
-    padding:0px;
+    padding:20px;
     display:grid;
     grid-template-columns: 1fr;
-    gap:20px;
     margin:0 auto;
+    border-radius: 20px;
 }
 
 /*INPUT SECTION*/
+
+.container > section{
+    padding:10px;
+    border-radius: 10px;
+    max-width: 100%;
+}
 
 .inputs{
     display:flex;
     flex-direction:column;
     gap:30px;
+    background-color: aquamarine;
 }
+
 .header{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding:10px 0;
+    padding:10px;
+    border-bottom: 2px solid silver;
 }
 
 .add-icon{
@@ -95,7 +106,7 @@ header p{
 .cancel{
     color:red;
     width:25px;
-    opacity:0;
+    visibility: hidden;
 }
 
 .cancel:hover{
@@ -115,7 +126,7 @@ header p{
 
 .course{
     width:100px;
-    background-color: inherit;
+    max-width:100%;
     font-size: 17px;
 }
 
@@ -125,38 +136,36 @@ header p{
 
 input,
 select{
-    padding: 5px;
+    padding: 2px;
     border:0;
     border-radius:3px;
+    box-shadow: 2px 2px 3px silver;
+    height:30px;
+    min-width:100%;
 }
 
 table{
-    border-spacing:0;
-    background-color:rgba(5, 249, 249, 0.246);
+    border-spacing:2px;
     width:100%;
-    border: 2px solid silver;
-    padding: 10px 0;
+    padding: 10px;
 }
 
 td,th{
     padding:6px 10px;
+    text-align: center;
 }
 
 tbody tr:hover{
-    background-color: silver;
+    background-color: rgb(75, 246, 189);
     cursor:pointer;
+    border-radius: 50px;
 }
 
 tbody tr:hover .cancel{
-    opacity:1;
+    visibility: visible;
 }
 
-
 .outputs{
-    background-color: white;
-    padding:0 15px;
-    border-radius: 10px;
-    margin-top: 20px;
     padding-bottom:20px;
 }
 .gpa{
@@ -171,7 +180,7 @@ tbody tr:hover .cancel{
 
 .heading{
     text-align: center;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 button{
@@ -184,6 +193,7 @@ button{
     font-weight: 700;
     letter-spacing: 2px;
     border-radius: 7px;
+    margin-bottom: 10px;
 }
 
 .add-semester:hover{
@@ -203,6 +213,38 @@ button{
     justify-content: space-between;
     margin-top: 20px;
 }
+
+@media screen and (max-width:800px){
+    table{
+        padding:0;
+        border-spacing: 5px;
+    }
+
+    .container{
+        padding:12px;
+    }
+    td{
+        padding:0;
+    }
+    }
+
+@media screen and (min-width:900px){
+    .container{
+        grid-template-columns: repeat(4, 1fr);
+      gap:20px;
+    }
+
+    .inputs{
+        grid-column: span 2;
+    }
+
+    .outputs{
+        grid-column: span 2;
+        height:fit-content;
+    }
+}
+
+
 
 
 
