--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@ header p{
 .cancel{
     color:red;
     width:25px;
-    visibility: hidden;
 }
 
 .cancel:hover{
@@ -161,10 +160,6 @@ tbody tr:hover{
     border-radius: 50px;
 }
 
-tbody tr:hover .cancel{
-    visibility: visible;
-}
-
 .outputs{
     padding-bottom:20px;
 }
@@ -214,6 +209,25 @@ button{
     margin-top: 20px;
 }
 
+footer{
+    text-align: center;
+    padding: 30px 0 0 0;
+}
+
+.instruction{
+    list-style: lower-alpha;
+    padding:40px 20px;
+}
+.instruction li{
+   font-size: small;
+  
+    list-style: lower-alpha;
+    display:block;
+    border-bottom:0;
+    padding:5px 0;
+}
+
+
 @media screen and (max-width:800px){
     table{
         padding:0;
@@ -232,6 +246,10 @@ button{
     .container{
         grid-template-columns: repeat(4, 1fr);
       gap:20px;
+    }
+
+    .instruction li{
+        font-size: medium;
     }
 
     .inputs{
